fix logo on mobile

--- a/src/scss/Header.scss
+++ b/src/scss/Header.scss
@@ -9,7 +9,7 @@
 
     &__logo {
         height: 100%;
-        width: 14%;
+        width: 350px;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -25,21 +25,13 @@
     // Media queries
     @media screen and (max-width: 768px) {
         &__logo {
-            width: 20%;
-        }
-
-        &__shield {
-            width: 12%;
+            width: 250px;
         }
     }
 
     @media screen and (max-width: 480px) {
         &__logo {
-            width: 30%;
-        }
-
-        &__shield {
-            width: 16%;
+            width: 200px;
         }
     }
 }
